fixing link and format for studio content

--- a/studio_content.html
+++ b/studio_content.html
@@ -1,5 +1,7 @@
-<p>
-Here you’ll find a link to resources to help reinforce the concepts you’ve learned.
-</p>
 
-<a href="http://gymnasium.github.io/GYM-008/Lesson_Files/RPA_All_Assets.zip" target="_blank">Download a zip file of all student assets</a>
+<p>Here you’ll find a link to resources to help reinforce the concepts you’ve learned.
+
+
+<dl>
+<dd><a href="http://gymnasium.github.io/GYM-008/Lesson_Files/lesson_files_axure_gym_short.zip">Download a zip file of all student assets</a></dd>
+</dl>
