--- a/studio_content.html
+++ b/studio_content.html
@@ -1,5 +1,5 @@
 
-<p>Here you’ll find a link to resources to help reinforce the concepts you’ve learned.
+<p>Here you’ll find a link to resources to help reinforce the concepts you’ve learned.</p>
 
 
 <dl>
